<resources>
    <string name="app_name">BitTooth</string>
    <string name="refresh">Refresh</string>
    <string name="available_devices">Available Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="discoverable">Device Discovery</string>
    <string name="pair">Pair</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="off">OFF</string>
    <string name="config">CONFIG</string>
    <string name="splash">Splash Image</string>
</resources>
