<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">


    <Switch
        android:id="@+id/switch_togleBT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="ON/OFF" />


    <Switch
        android:id="@+id/switch_togleDiscoverable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/discoverable" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paired_devices"
        android:paddingBottom="10dp"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/available_devices"
            android:paddingBottom="10dp"/>

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/refresh" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_available_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>